# dotfiles

.config/: config.kdl
.config/fastfetch/: config.jsonc
.config/hypr/: hyprland.conf
.config/noctalia/: colors.json  settings.json
.config/quickshell/: shell.qml
.config/quickshell/config/: wallpaper.json
.config/quickshell/docs/: WALLPAPER_SERVICE.md
.config/quickshell/src/core/config/: Config.qml
.config/quickshell/src/core/services/: AudioService.qml  BluetoothService.qml  CalendarService.qml  DateTime.qml  GlobalStates.qml  IdleInhibitor.qml  LauncherService.qml  MprisController.qml  NetworkService.qml  SystemMonitorService.qml  VPNService.qml  WallpaperService.qml  Weather.qml  WeatherIcons.qml
.config/quickshell/src/features/: GlobalState.qml
.config/quickshell/src/features/background/: Wallpaper.qml
.config/quickshell/src/features/dashboard/: Dashboard.qml  DashboardContent.qml
.config/quickshell/src/features/dashboard/components/: AudioTab.qml  CalendarTab.qml  DeviceSelectionDialog.qml  EventDialog.qml  MainTab.qml  MediaTab.qml  TabButton.qml  qmldir
.config/quickshell/src/features/dashboard/components/audiotab_elements/: MediaPlayer.qml  qmldir
.config/quickshell/src/features/dashboard/components/maintab_elements/: CavaElement.qml  ClockElement.qml  MediaPlayerElement.qml  QuickActionsElement.qml  SheduleElement.qml  SystemMonitoringElement.qml  SystemTrayElement.qml  TrayMenu.qml  TrayMenuOverlay.qml  TrayTooltip.qml  UserInfoElement.qml  WeatherElement.qml
.config/quickshell/src/features/launcher/: Launcher.qml  LauncherContent.qml  qmldir
.config/quickshell/src/features/launcher/components/: AppListItem.qml  qmldir
.config/quickshell/src/features/launcher/providers/: ApplicationProvider.qml  BaseProvider.qml  CalculatorProvider.qml  FileProvider.qml  qmldir
.config/quickshell/src/features/osd/: VolumeOSD.qml  qmldir
.config/quickshell/src/features/statusbar/: ClockWidget.qml  LayoutWidget.qml  MPRISWidget.qml  StatusBar.qml  VolumeWidget.qml  WorkspaceWidget.qml
.config/quickshell/src/plugins/: CMakeLists.txt
.config/quickshell/src/plugins/src/file-search-qml/: CMakeLists.txt  FileSearcher.cpp  FileSearcher.h  qmldir
.config/quickshell/src/plugins/src/mcu-qml/: CMakeLists.txt  McuTheme.cpp  McuTheme.h  plugin.cpp  qmldir
.config/quickshell/src/plugins/src/qalculate-qml/: CMakeLists.txt  QalculateWrapper.cpp  QalculateWrapper.h  qmldir
.config/quickshell/src/ui/animations/: StandardAnimations.qml
.config/quickshell/src/ui/base/: AnimatedProperty.qml  CircleAvatar.qml  ClickableIcon.qml  IconButton.qml  MaterialButton.qml  MaterialIcon.qml  MaterialIndicator.qml  MaterialText.qml  SectionHeader.qml  qmldir
.config/quickshell/src/ui/containers/: BarElement.qml  BarSection.qml  CenterBarSection.qml  Divider.qml  ListItem.qml  MaterialCard.qml  ScrollableList.qml  qmldir
.config/quickshell/src/ui/feedback/: Badge.qml  Dialog.qml  EmptyState.qml  LazyPopup.qml  MaterialMenu.qml  StateLayer.qml  TooltipItem.qml  TooltipManager.qml  qmldir
.config/quickshell/src/ui/inputs/: MaterialCheckBox.qml  MaterialSlider.qml
nixos/: configuration.nix  flake.nix  hardware-configuration.nix  home.nix
